-
Bug
-
Resolution: Done
-
P1: Critical
-
4.8.5, 5.2.0
-
Windows 7, Windows 8
-
9f18335913fc8b0fab3e1fcd2aea596bd8d650c9 5ef0ef71b06b0d7949c88db6719fd43907f342fd
When a QWebView is already visible then loading a page that requires a plugin doesn't always show the plugin straight away. This seems to be somewhat inconsistent but with the attached example it reproduces every time.
You may need the patch from https://codereview.qt-project.org/#change,74890 in order to ensure it is shown correctly when it does show up (otherwise it may be 0x0).
For Gerrit Dashboard: QTBUG-36425 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
95096,4 | [Win] Call set window twice for the Acrobat reader plugin. | 5.4 | qt/qtwebkit | Status: MERGED | +2 | 0 |
95107,3 | Fix the Adobe Reader plugin loading of local pdf files | 5.4 | qt/qtwebkit | Status: MERGED | +2 | 0 |