[Win] Call set window twice for the Acrobat reader plugin.

Works around a quirk of the Acrobat reader that displayed the
window with incorrect dimensions before.

Task-number: QTBUG-36425
Change-Id: Ic5b7544a74c8e8613251850aa21537fab420b9c4
Reviewed-by: Jocelyn Turcotte <jocelyn.turcotte@digia.com>